--- a/gulp-cli/views/login.html
+++ b/gulp-cli/views/login.html
@@ -16,73 +16,85 @@
   <div class="top">
     <div class="top_right">
       <ul>
-        <li class="goodnum">QQ靓号</li>
-        <li class="language">简体中文 <img src="" alt=""></li>
+        <li class="goodnum">
+          <img src="./image/logo3.png" alt=""> 
+          QQ靓号
+        </li>
+        <li class="language">
+          <span>简体中文</span>  
+          <img src="./image/logindown.png" alt="">
+          <div>
+            <p>繁體中文</p>
+            <p>English</p>
+          </div>
+        </li>
         <li class="opinion">意见反馈</li>
       </ul>
     </div>
   </div>
   <div class="main_wrap">
     <div class="main">
-      <h2>欢迎注册QQ</h2>
-      <h3>每一天，乐在沟通。</h3><a href="#">免费靓号</a>
-      <div class="nickname">
-        <input type="text" placeholder="昵称">
-      </div>
-      <div class="nickname_error_wrap">
-        <div class="nickname_error">
-          <img src="./image/loginerror.png" alt=""> <p>昵称不可以为空</p>
+      <div class="form">
+        <h2>欢迎注册QQ</h2>
+        <h3>每一天，乐在沟通。<a href="#">免费靓号</a></h3>
+        <div class="nickname">
+          <input type="text" placeholder="昵称" class="ipt">
         </div>
-      </div>
-      <div class="password">
-        <input type="text" placeholder="昵称">
-      </div>
-      <div class="password_error_wrap">
-        <div class="password_error">
-          <img src="./image/loginerror.png" alt=""> <p>密码不能为空</p>
-        </div>
-        <div class="password_tips">
-          <div><img src="./image/logingreen.png" alt=""> <p>不能包括空格</p></div>
-          <div><img src="./image/logininfo.png" alt=""> <p>长度为8-16个字符</p></div>
-          <div><img src="./image/logininfo.png" alt=""> <p>必须包含字母、数字、符号中至少2种</p></div>
-        </div>
-      </div>
-      <div class="phone">
-        <div class="list_wrap">
-          <div class="list_outer">
-            <p>+86</p><img src="./image/logindown.png" alt="">
+        <div class="nickname_error_wrap">
+          <div class="nickname_error">
+            <img src="./image/loginerror.png" alt=""> <p>昵称不可以为空</p>
           </div>
-          <div class="list_inner">
-            <ul>
-              <li>中国 +86</li>
-              <li>中国香港特别行政区 +852</li>
-              <li>中国香港特别行政区 +853</li>
-            </ul>
+        </div>
+        <div class="password">
+          <input type="password" placeholder="密码" class="ipt">
+        </div>
+        <div class="password_error_wrap">
+          <div class="password_error">
+            <img src="./image/loginerror.png" alt=""> <p>密码不能为空</p>
           </div>
-          <p>可通过该手机号找回密码</p>
+          <div class="password_tips">
+            <div><img src="./image/logingreen.png" alt=""> <p>不能包括空格</p></div>
+            <div><img src="./image/logininfo.png" alt=""> <p>长度为8-16个字符</p></div>
+            <div><img src="./image/logininfo.png" alt=""> <p>必须包含字母、数字、符号中至少2种</p></div>
+          </div>
         </div>
-        <div class="phonenum">
-          <input type="text" placeholder="手机号码">
+        <div class="phone">
+          <div class="list_wrap">
+            <div class="list_outer">
+              <p>+86</p><img src="./image/logindown.png" alt="">
+            </div>
+            <div class="list_inner">
+              <ul>
+                <li>中国 +86</li>
+                <li>中国香港特别行政区 +852</li>
+                <li>中国香港特别行政区 +853</li>
+              </ul>
+            </div>
+            <p>可通过该手机号找回密码</p>
+          </div>
+          <div class="phonenum">
+            <input type="text" placeholder="手机号码">
+          </div>
+          <!-- <div class="phone_error">
+            <img src="./image/loginerror.png" alt=""> <p>手机号码不可以为空</p>
+          </div> -->
         </div>
-        <!-- <div class="phone_error">
-          <img src="./image/loginerror.png" alt=""> <p>手机号码不可以为空</p>
-        </div> -->
-      </div>
-      <div class="message">
-        <input type="text" placeholder="短信验证码">
-        <span>发送短信验证码</span>
-      </div>
-      <div class="submit">
-        <span>立即注册</span>
-      </div>
-      <div class="readed">
-        <img src="./image/checkbox_normal.png" alt=""> 我已阅读并同意相关服务条款和隐私政策
-        <img src="./image/logindown.png" alt="">
-      </div>
-      <div class="rool">
-        <a href="#">《QQ号码规则》</a>
-        <a href="#">《隐私政策》</a>
-        <a href="#">《QQ空间服务协议》</a>
+        <div class="message">
+          <input type="text" placeholder="短信验证码">
+          <span>发送短信验证码</span>
+        </div>
+        <div class="submit">
+          <span>立即注册</span>
+        </div>
+        <div class="readed">
+          <img src="./image/checkbox_normal.png" alt=""> 我已阅读并同意相关服务条款和隐私政策
+          <img src="./image/logindown.png" alt="">
+        </div>
+        <div class="rool">
+          <a href="#">《QQ号码规则》</a>
+          <a href="#">《隐私政策》</a>
+          <a href="#">《QQ空间服务协议》</a>
+        </div>
       </div>
     </div>
   </div>
