--- a/gulp-cli/views/login.html
+++ b/gulp-cli/views/login.html
@@ -94,6 +94,9 @@
           <input type="text" placeholder="短信验证码">
           <span>发送短信验证码</span>
         </div>
+        <div class="message_err">
+          <p>验证码不正确！</p>
+        </div>
         <div class="submit">
           <p>立即注册</p>
         </div>
